--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "angular2-jwt": "0.2.2",
     "aspnet-prerendering": "2.0.3",
     "aspnet-webpack": "1.0.28",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "3.3.7",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "isomorphic-fetch": "2.2.1",
