--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "isomorphic-fetch": "2.2.1",
+    "ng2-toastr": "^4.0.1",
     "preboot": "4.5.2",
     "rxjs": "5.3.0",
     "zone.js": "0.8.9"
