--- a/appsettings.json
+++ b/appsettings.json
@@ -57,6 +57,11 @@
     "LinkedIn": {
       "ClientId": "ChangeMe",
       "ClientSecret": "ChangeMe"
+    },
+    "Test": {
+      "LOCAL": "(LocalDb)\\MSSQLLocalDB",
+      "PROD": "Data Source=SQL6003.SmarterASP.NET;Initial Catalog=DB_A28B18_vapevaultliquids;User Id=DB_A28B18_vapevaultliquids_admin;Password=qwerty1234;"
+
     }
   }
 }
